# kaisha

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json
.cursor/rules/: global-i18n.mdc
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: index.html  package.json  tsconfig.json
apps/web/public/font/: iconfont.css  iconfont.js
apps/web/src/: App.tsx  styles.css
apps/web/src/components/: ChatHistoryList.tsx  CollapsibleMessageText.tsx  ConfirmDialog.tsx  EmployeeChatPanel.tsx  EmployeeChatPanel.wireCache.test.ts  EmployeeList.tsx  EmployeeTaskDetailDialog.tsx  EmployeeTaskList.tsx  GitFileDialog.tsx  GitFileTree.tsx  GitPanel.tsx  GitRepoList.tsx  LeftPanel.tsx  LeftSidebar.tsx  MacWindowControls.tsx  RequirementActionBar.tsx  RequirementConfirmSection.tsx  RequirementDetailPanel.tsx  RequirementDevelopmentSection.tsx  RequirementList.tsx  RequirementPhaseContent.tsx  RequirementPhaseTimeline.tsx  RequirementReleaseSection.tsx  RequirementReviewOpinionRow.tsx  RequirementReviewSection.tsx  RequirementTestingSection.tsx  SettingsCards.tsx  WorkArea.tsx  WorkRulesSettings.tsx
apps/web/src/features/employee-chat/: collapsibleMessageText.test.ts  collapsibleMessageText.ts  imeSafeEnterSubmit.ts  useEmployeeChatMessages.ts
apps/web/src/i18n/: en.json  index.ts  ja.json  zh.json
configs/: runtime.env.example
crates/application/src/: lib.rs
crates/server/: Cargo.toml
crates/server/i18n/: en.json  ja.json  zh.json
crates/server/src/: agent_locale.rs  autonomy.rs  autonomy_task.rs  autonomy_trigger.rs  conversation_task.rs  dev_task_executor.rs  employee.rs  employee_chat.rs  employee_conversation_stream.rs  employee_intent_router.rs  employee_requirement_agent.rs  employee_todo.rs  i18n.rs  lib.rs  logging.rs  main.rs  requirement.rs  requirement_agents.rs  requirement_development.rs  requirement_release.rs  requirement_review.rs  requirement_testing.rs  shop_status.rs  work_rules.rs  work_task.rs  work_task_reconcile.rs
crates/server/src/autonomy/: api.rs  events.rs  execute.rs  executor.rs  explore.rs  legacy.rs  mod.rs  plan.rs  planner.rs  runtime.rs  scheduler.rs  store.rs  task.rs  task_graph.rs  worker.rs  worker_pool.rs
crates/server/src/git/: explorer.rs  mod.rs  registry.rs  service.rs
crates/server/src/intent/: context.rs  detectors.rs  handlers.rs  mod.rs
crates/server/src/tasks/: detail.rs  mod.rs  model.rs  runner.rs  runtime.rs  store.rs
crates/server/src/tools/: chat_stream.rs  driver.rs  manager.rs  model.rs  store.rs
crates/server/src/tools/drivers/: claude_code.rs  cursor_cli.rs
scripts/: build_all.sh  build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_windows.sh  dev_browser.sh  dev_common.sh  dev_desktop.sh  dev_server.sh  init_env.sh
(+22 files in other folders)
