[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/application",
  "crates/server",
  "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["kaisha team"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
