[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kaisha-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
application = { path = "../application" }
axum = { workspace = true }
domain = { path = "../domain" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
