[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kaisha-server"
path = "src/main.rs"

[[bin]]
name = "kaisha-migrate-work-tasks"
path = "src/bin/migrate_work_tasks.rs"

[dependencies]
anyhow = { workspace = true }
application = { path = "../application" }
axum = { workspace = true }
domain = { path = "../domain" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
